Fix buttons going outside of navbar if screen is too small

--- a/style.css
+++ b/style.css
@@ -108,7 +108,6 @@ a {
     height: 100%;
 }
 /* NavbarBody */
-
 .navbar-brand a {
     color: var(--ContraColor)
 }
@@ -140,6 +139,58 @@ a {
     background-color: var(--MainColor) !important;
     color: var(--ContraColor) !important;
     text-decoration: none;
+}
+
+/* Responsiveness */
+.topnav {
+    overflow: hidden;
+    background-color: #111;
+}
+
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.topnav .icon {
+    display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
 
 /* Home */
